--- a/.gitignore
+++ b/.gitignore
@@ -500,3 +500,9 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/linux,windows,vim,emacs,java,python,julia,haskell,intellij,eclipse
+*.fdb_latexmk
+/english-mla/.auctex-auto/
+*.bbl
+*.pdf
+*.tex
+*.fls
